# MyAgents

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: chat_service.py  rag_agent.py
config/: logging_config.py
data/: sanziqi.docx
models/all-MiniLM-L6-v2/: config.json
utils/: document_parser.py  llm_response.py  vector_store.py
