[project]
name = "myagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "python-docx",
    "faiss_cpu",
    "langchain",
    "langgraph",
    "numpy",
    "openai",
    "PyPDF2",
    "python-dotenv",
    "sentence_transformers",
    ]
[tool.setuptools]
packages = ["agents", "data", "config"]